--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -7,7 +7,7 @@
     color: #333; 
     font-family: 'Chillax', sans-serif; 
 
-    &__logo{
+    &__logo {
         font-size: 25px;
         color: #761f00;
     }
@@ -69,7 +69,7 @@
     }
 }
 
-
+// RESPONSIVE
 @media (max-width: 768px) {
     .navbar {
         flex-direction: column;
@@ -84,6 +84,41 @@
 
         &__toggle {
             display: block;
+        }
+    }
+}
+
+// ======== DARK MODE ========
+.dark-mode {
+    .navbar {
+        background-color: #121212;  // Fondo oscuro
+        color: #ffffff;  // Texto en blanco para contraste
+
+        &__logo {
+            color: #ff6a00;  // Un tono vibrante para destacar
+        }
+
+        &__links {
+            a {
+                color: #ffffff;  // Enlaces en blanco para mayor visibilidad
+                &:hover {
+                    text-shadow: 0px 4px 6px rgba(255, 102, 0, 0.8);
+                }
+            }
+        }
+
+        &__actions {
+            button {
+                background-color: #ff6a00; 
+                color: #121212; 
+                &:hover {
+                    background-color: #ff8c42;
+                }
+            }
+        }
+
+        &__toggle {
+            color: #ffffff; // Ícono del menú más visible en dark mode
         }
     }
 }
